# Hamzawi_Project

./: GoldenCandleEA.mq4  README.md  ReadMe.md  Ve  winapi_id_registry.json
GoldenShell_MT4_DLLfree_v5 (1)/Expert/: GoldenShell.mq4
GoldenShell_MT4_DLLfree_v5 (1)/Include/: GoldenCandle.mqh  LevelSystem.mqh  UI.mqh  Utils.mqh
GoldenShell_MT4_DLLfree_v5/Include/: Indicators.mqh  OrderManager.mqh
Requeriements/: IMPLEMENTATION_REQUIREMENTS.md  REQUIREMENTS_SPEC_REFINED.md  Technical_Documentation.md  client_requirement_V2.txt  requirements updates08_21  requirements.md
Version2/: build_and_package.sh
Version2/Delivery_Package/: DELIVERY_CHECKLIST.md  User_Manual.md
Version2/Delivery_Package/Expert/: GoldenCandleEA_v2.mq4
Version2/MT4_integration/expert/: GoldenCandleEA.mq4  GoldenCandleEA_v2.mq4
Version3/: README.md  TECHNICAL_DOCUMENTATION.md  USER_MANUAL.md  build.bat
Version3/EA_Framework/: IMPLEMENTATION_PLAN.md  README.md  REQUIREMENTS_SPEC.md
Version3/EA_Framework_v2/DLL/: CMakeLists.txt  GoldenCandleStrategy.cpp
Version3/EA_Framework_v2/DLL/Include/: GoldenCandleCore.h  PositionManagerCore.h  RiskManagementCore.h  TechnicalCore.h
Version3/EA_Framework_v2/DLL/Source/: TechnicalCore.cpp
Version3/Expert/: EA.mq4  EA_Test.mq4
Version3/archive/: README.md  full_demo_interface_EA.mq4
Version4/EA_Framework/: README.md
Version4/EA_Framework/core/: CMakeLists.txt
Version4/EA_Framework/core/include/: ea_api.h.new
Version4/EA_Framework/core/src/: state.cpp  state.cpp.new
archive/: README.md
archive/Version3/: README.md
(+96 files in other folders)
